--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,23 @@
 /* You can add global styles to this file, and also import other style files */
+.overlay {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(74,74,74, .8);
+    z-index: 10000;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.bg-modal {
+    background-color: rgba(74,74,74, .8);
+}
+.icon-crud {
+    cursor: pointer;
+
+}
+.icon-crud:hover {
+    color: blue;
+    transform: scale(1.3);
+    
+}
